prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__read_csv.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# sqlite:skip\n# postgres:skip\n# mysql:skip\nfrom (read_csv \"data_file_root/media_types.csv\")\nappend (read_json \"data_file_root/media_types.json\")\nsort media_type_id\n"
input_file: prqlc/prqlc/tests/integration/queries/read_csv.prql
---
from (read_csv "data_file_root/media_types.csv")
append (
  read_json "data_file_root/media_types.json"
)
sort media_type_id
