prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__set_ops_remove.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nlet distinct = rel -> (rel | group this (take 1))\n\nfrom_text format:json '{ \"columns\": [\"a\"], \"data\": [[1], [2], [2], [3]] }'\ndistinct\nremove (from_text format:json '{ \"columns\": [\"a\"], \"data\": [[1], [2]] }')\nsort a\n"
input_file: prqlc/prqlc/tests/integration/queries/set_ops_remove.prql
---
let distinct = func rel -> (rel | group this (take 1))

from_text format:json '{ "columns": ["a"], "data": [[1], [2], [2], [3]] }'
distinct
remove (from_text format:json '{ "columns": ["a"], "data": [[1], [2]] }')
sort a

