prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__sort_cast_filter_join_select.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from albums\nselect { this.`title`, this.`artist_id` }\nsort { this.`artist_id` }\nderive { `artist_id` = as `double precision` this.`artist_id` }\nfilter (this.`artist_id` != null)\njoin side:left artists (this.`artist_id` == that.`artist_id`)\nselect {this.`artist_id`, this.`title`, this.`name`}\n"
input_file: prqlc/prqlc/tests/integration/queries/sort_cast_filter_join_select.prql
---
from albums
select {this.title, this.artist_id}
sort {this.artist_id}
derive {artist_id = as `double precision` this.artist_id}
filter this.artist_id != null
join side:left artists this.artist_id == that.artist_id
select {this.artist_id, this.title, this.name}
