prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__sort_cast_filter_join_select_with_alias.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from albums\nselect { this.`title`, this.`artist_id` }\nsort { this.`artist_id` }\nderive { `double_artist_id` = as `double precision` this.`artist_id` }\nfilter (this.`artist_id` != null)\njoin side:left artists (this.`double_artist_id` == that.`artist_id`)\nselect {this.`double_artist_id`, this.`title`, this.`name`}\n"
input_file: prqlc/prqlc/tests/integration/queries/sort_cast_filter_join_select_with_alias.prql
---
from albums
select {this.title, this.artist_id}
sort {this.artist_id}
derive {double_artist_id = as `double precision` this.artist_id}
filter this.artist_id != null
join side:left artists this.double_artist_id == that.artist_id
select {this.double_artist_id, this.title, this.name}
