prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__sort_with_aggregation_and_limit.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from albums\nsort artist_id\ntake 10\naggregate { artist_number = count artist_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/sort_with_aggregation_and_limit.prql
---
from albums
sort artist_id
take 10
aggregate {artist_number = count artist_id}
