prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__switch.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nfrom tracks\nsort milliseconds\nselect display = case [\n    composer != null => composer,\n    genre_id < 17 => 'no composer',\n    true => f'unknown composer'\n]\ntake 10\n"
input_file: prqlc/prqlc/tests/integration/queries/switch.prql
---
from tracks
sort milliseconds
select display = case [
  composer != null => composer,
  genre_id < 17 => "no composer",
  true => f"unknown composer",
]
take 10
