prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__take.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nfrom tracks\nsort {+track_id}\ntake 3..5\n"
input_file: prqlc/prqlc/tests/integration/queries/take.prql
snapshot_kind: text
---
from tracks
sort {+track_id}
take 3..5
